tests/error/misc_errors/unreachable_3.err
Error: Unreachable (at $FILE:8:8)
  | 
6 |     while x:
7 |         break
8 |         x = 42
  |         ^^^^^^ This code is not reachable

Guppy compilation failed due to 1 previous error
